partly implemented email confirm
also if user registers with email that was used to login via oauth2 the record of this user in db with that email is updated with new user data that was provided with registration.